<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/searchByNameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_name"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/searchByCategoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_category"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:layout_margin="8dp" />

        <EditText
            android:id="@+id/editInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите номер, название или категорию"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_margin="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/searchList" />
        </LinearLayout>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_margin="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>